@startuml bdd_solvers

package "solvers" {
  abstract class SCF
  class DIIS
  class CalculationErrorMetric
  class SpinPair

  package "wavefunction" {
    package "hartree_fock" {
      class "HartreeFock\n(Wavefunction)" as HFWave
      class RestrictedHartreeFock <<RHF>>
      class UnrestrictedHartreeFock <<UHF>>
      class RestrictedOpenShellHartreeFock <<ROHF>>
    }
  }
}

' ═══ Generalization ═══

HFWave -up-|> SCF
RestrictedHartreeFock -up-|> HFWave
UnrestrictedHartreeFock -up-|> HFWave
RestrictedOpenShellHartreeFock -up-|> HFWave

' ═══ Composition ═══

SCF *-- "1" DIIS
SCF *-- "1" CalculationErrorMetric

' ═══ Use ═══

HFWave ..> SpinPair : «use»

@enduml
